Added code masking

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class = 'min-h-screen flex items-center justify-center' style = "display:none" id ='container'>
     <div class = "grid grid-cols-3 bg-gray-800 rounded p-2 gap-2 text-center shadow"> 
-      <div class = "bg-gray-500 col-span-3 rounded text-white mb-1 w-full h-12 text-center py-2 text-2xl" id = "display">Enter code</div>
+      <div class = "bg-gray-500 col-span-3 rounded text-white mb-1 w-full h-12 text-center py-2 text-2xl" id = "display" type ='password'>Enter code</div>
       <button class = "bg-gray-500 rounded w-10 h-10 p-2 text-white hover:bg-gray-300 transition-all ease-in-out" onclick="add('1')">1</button>
       <button class = "bg-gray-500 rounded w-10 h-10 p-2 text-white hover:bg-gray-300 transition-all ease-in-out" onclick="add('2')">2</button>
       <button class = "bg-gray-500 rounded w-10 h-10 p-2 text-white hover:bg-gray-300 transition-all ease-in-out" onclick="add('3')">3</button>
